[gd_scene format=3 uid="uid://d0xak1rv4tda0"]

[ext_resource type="Script" uid="uid://wgfb8vvpxkha" path="res://demo/client_ui.gd" id="1"]
[ext_resource type="Script" uid="uid://dd8irriksq2si" path="res://client/multiplayer_client.gd" id="2"]
[ext_resource type="Script" uid="uid://bqot08jcbkmw3" path="res://demo/R_P_S_Manager.gd" id="3_jkibb"]
[ext_resource type="Texture2D" uid="uid://c27mlvrb4x1fc" path="res://demo/icons8-copy-24.png" id="4_dmi1k"]
[ext_resource type="Texture2D" uid="uid://vmr40lny72qf" path="res://demo/icons8-paste-24.png" id="5_sgolo"]
[ext_resource type="PackedScene" uid="uid://cfkglseapmfuc" path="res://demo/players_list.tscn" id="6_2vbtq"]
[ext_resource type="AudioStream" uid="uid://bio61e2qonx55" path="res://audio/japanese-garden.mp3" id="7_axmsd"]
[ext_resource type="AudioStream" uid="uid://cbcrsoyigorgk" path="res://audio/shaped-taiko-180916-fade.mp3" id="7_jf6ya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmi1k"]
bg_color = Color(0.4182794, 0.4182795, 0.41827932, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ClientUI" type="Control" unique_id=2039826734 node_paths=PackedStringArray("audio_stream")]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
audio_stream = NodePath("AudioStreamPlayer2D")
player_select_audio_clip = ExtResource("7_jf6ya")

[node name="Client" type="Node" parent="." unique_id=1681006175]
script = ExtResource("2")

[node name="RockPaperScissorsGame" type="Node" parent="." unique_id=1476710567]
script = ExtResource("3_jkibb")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1630436648]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 655.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=1275782362]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=919251034]
layout_mode = 2

[node name="YourNameHBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1586485063]
layout_mode = 2

[node name="YourNameLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2/YourNameHBox" unique_id=1796257811]
layout_mode = 2
text = "Your Name: "

[node name="YourName" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2/YourNameHBox" unique_id=1139554303]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
editable = false

[node name="YourColor" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer2/YourNameHBox" unique_id=1666045181]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Spacer1" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=738631143]
layout_mode = 2
size_flags_horizontal = 3

[node name="Connect" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=720566541]
layout_mode = 2

[node name="Room" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2/Connect" unique_id=1928131142]
layout_mode = 2
size_flags_vertical = 5
text = "Room:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomSecret" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2/Connect" unique_id=364016474]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "secret"

[node name="CopyButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/Connect" unique_id=2088571026]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "Copy"
theme_override_styles/normal = SubResource("StyleBoxFlat_dmi1k")
icon = ExtResource("4_dmi1k")
icon_alignment = 1

[node name="PasteButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/Connect" unique_id=2128573818]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "Paste"
theme_override_styles/normal = SubResource("StyleBoxFlat_dmi1k")
icon = ExtResource("5_sgolo")
icon_alignment = 1

[node name="Mesh" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/Connect" unique_id=1035447373]
visible = false
layout_mode = 2
disabled = true
button_pressed = true
text = "Mesh"

[node name="Spacer2" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=2000030308]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=2016933979]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" unique_id=1892774963]
layout_mode = 2
text = "Game:"

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" unique_id=341820097]
layout_mode = 2
text = "Start"

[node name="Stop" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" unique_id=1768504484]
visible = false
layout_mode = 2
disabled = true
text = "Stop"

[node name="Seal" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" unique_id=2085631893]
visible = false
layout_mode = 2
disabled = true
text = "Seal"

[node name="Ping" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" unique_id=1317364327]
visible = false
layout_mode = 2
text = "Ping"

[node name="Peers" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer" unique_id=571306090]
visible = false
layout_mode = 2
disabled = true
text = "Print peers"

[node name="Spacer3" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=192949272]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioOptions" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1169957224]
layout_mode = 2

[node name="musicCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/AudioOptions" unique_id=1040590090]
layout_mode = 2
button_pressed = true
text = "Music"

[node name="sfxCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/AudioOptions" unique_id=1676920714]
layout_mode = 2
button_pressed = true
text = "SFX
"

[node name="Spacer4" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1134983985]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameCtrl" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1223143156]
layout_mode = 2

[node name="PlayLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl" unique_id=1205753112]
layout_mode = 2
text = "Play:"

[node name="Rock" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl" unique_id=1420693998]
layout_mode = 2
text = "Rock"

[node name="Paper" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl" unique_id=209815439]
layout_mode = 2
text = "Paper"

[node name="Scissors" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl" unique_id=712602865]
layout_mode = 2
text = "Scissors"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer" unique_id=197242769]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersList" parent="HBoxContainer" unique_id=1231415985 instance=ExtResource("6_2vbtq")]
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1313892526]
stream = ExtResource("7_jf6ya")

[node name="Background Music" type="AudioStreamPlayer2D" parent="." unique_id=1200122410]
stream = ExtResource("7_axmsd")
autoplay = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/Connect/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/Connect/PasteButton" to="." method="_on_paste_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Seal" to="." method="_on_seal_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Ping" to="." method="_on_ping_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Peers" to="." method="_on_peers_pressed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/HBoxContainer2/AudioOptions/musicCheckBox" to="." method="_on_music_check_box_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/HBoxContainer2/AudioOptions/sfxCheckBox" to="." method="_on_sfx_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl/Rock" to="." method="_on_rock_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl/Paper" to="." method="_on_paper_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/GameCtrl/Scissors" to="." method="_on_scissors_pressed"]
